# IFST-11Kursach_Provider

./: .gitignore  CMakeLists.txt  readme.md
include/: entities.h  handlers.h  login.h  system.h
src/: entities.cpp  handlers.cpp  login.cpp  main.cpp
